updates to experiments